--- a/index.html
+++ b/index.html
@@ -4,8 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header class="header-area">
+        <ul>
+            <li>About</li>
+            <li>Work</li>
+            <li>Portfolio</li>
+            <li>Contact</li>
+        </ul>
+    </header>
+    <section>
+        <div class="half-width">
+            <h1>HELLO, I'M</h1>
+            <h1 class="orange-highlight">ROB DAVDISON</h1>
+            <p>A full stack allaround designer that placerat <br> in massa consectetur</p>
+            <a class="link-button" target="-blank" href="https://kazi-coder.github.io/web-portfolio-old/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/Group 33082.png" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/Group 33090.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>ABOUT</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and <br>
+                typesetting industry. Lorem Ipsum has been the industry's <br>
+                standard dummy text ever since the 1500s, when an unknown <br>
+                printer took a galley of type and scrambled it to make a type <br>
+                specimen book.</p>
+            <a class="link-button" target="-blank" href="https://kazi-coder.github.io/web-portfolio-old/">Download CV</a>
+        </div>
+    </section>
+    <section  class="project-area">
+        <h2><span class="orange-highlight">LATEST</span> WORKING PROJECT</h2>
+        <div class="single-project margin-left">
+            <img src="images/image 4.png" alt="">
+            <h3>Power-x-gym (gym website)</h3>
+            <p>Lorem Ipsum is simply dummy text of the  <br>
+                printing and typesetting industry.</p>
+        </div>
+        <div class="single-project">
+            <img src="images/image 5.png" alt="">
+            <h3>Creative Agency</h3>
+            <p>Lorem Ipsum is simply dummy text of the  <br>
+                printing and typesetting industry.</p>
+        </div>
+        <div class="single-project">
+            <img src="images/image 8.png" alt="">
+            <h3>Hard Rock Music</h3>
+            <p>Lorem Ipsum is simply dummy text of the  <br>
+                printing and typesetting industry.</p>
+        </div>
+    </section>
+    <footer class="footer-area">
+        <img src="shapes/img-1.png" alt="">
+        <div class="text-area">
+            <h3>STAY CONNECTED</h3>
+            <h2>hello@design.com</h2>
+        </div>
+        <div class="icon">
+            <img src="icons/image 6.png" alt="">
+            <img src="icons/Group 33059.png" alt="">
+            <img src="icons/image 7.png" alt="">
+
+        </div>
+    </footer>
 </body>
 </html>
